--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
   "javascript.preferences.quoteStyle": "double", // Use double quotes in JavaScript
   "editor.codeActionsOnSave": {
     "source.fixAll": "explicit"
-  }
+  },
+  "tailwindCSS.experimental.classRegex": []
 }
